--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "es7-membrane",
   "version": "0.0.0",
   "description": "An ECMAScript implementation of a Membrane, allowing users to dynamically hide, override, or extend objects in JavaScript with controlled effects on the original objects.",
-  "main": "Membrane.js",
+  "main": "dist/node/Membrane.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/jasmine/bin/jasmine.js"
   },
   "repository": {
     "type": "git",
