--- a/mocks/intro.js.in
+++ b/mocks/intro.js.in
@@ -1,3 +1,3 @@
-function MembraneMocks(includeDamp) {
+function MembraneMocks(includeDamp, logger) {
   "use strict";
   includeDamp = Boolean(includeDamp);
