Fixes #21, Use Case: Whitelist, Setting properties with private names.

--- a/mocks/intro.js.in
+++ b/mocks/intro.js.in
@@ -1,3 +1,7 @@
-function MembraneMocks(includeDamp, logger) {
+function MembraneMocks(includeDamp, logger, mockOptions) {
   "use strict";
   includeDamp = Boolean(includeDamp);
+  if (!mockOptions)
+    mockOptions = {};
+
+  var Mocks = {};
