--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "es7-membrane",
   "version": "0.7.0",
   "description": "An ECMAScript implementation of a Membrane, allowing users to dynamically hide, override, or extend objects in JavaScript with controlled effects on the original objects.",
-  "main": "docs/dist/node/Membrane.js",
+  "main": "docs/dist/node/es7-membrane.js",
   "scripts": {
     "test": "./node_modules/jasmine/bin/jasmine.js"
   },
