--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An ECMAScript implementation of a Membrane, allowing users to dynamically hide, override, or extend objects in JavaScript with controlled effects on the original objects.",
   "main": "docs/dist/node/es7-membrane.js",
   "scripts": {
+    "gui-tests": "karma start karma.conf.js",
     "test": "./node_modules/jasmine/bin/jasmine.js"
   },
   "repository": {
@@ -20,6 +21,10 @@
     "assert": "^1.4.1"
   },
   "devDependencies": {
-    "jasmine": "^2.8.0"
+    "jasmine": "^2.8.0",
+    "karma": "^1.7.1",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.1.0"
   }
 }
