--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
+    "karma-firefox-launcher": "^1.0.1",
     "karma-jasmine": "^1.1.0"
   }
 }
