--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "es7-membrane",
+  "name": "es-membrane",
   "version": "0.8.3",
   "description": "An ECMAScript implementation of a Membrane, allowing users to dynamically hide, override, or extend objects in JavaScript with controlled effects on the original objects.",
-  "main": "docs/dist/node/es7-membrane.js",
+  "main": "docs/dist/node/es-membrane.js",
   "scripts": {
     "gui-tests": "karma start karma.conf.js",
     "test": "./node_modules/jasmine/bin/jasmine.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ajvincent/es7-membrane.git"
+    "url": "git+https://github.com/ajvincent/es-membrane.git"
   },
   "author": "Alexander J. Vincent <ajvincent@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ajvincent/es7-membrane/issues"
+    "url": "https://github.com/ajvincent/es-membrane/issues"
   },
-  "homepage": "https://github.com/ajvincent/es7-membrane#readme",
+  "homepage": "https://github.com/ajvincent/es-membrane#readme",
   "dependencies": {
     "assert": "^1.4.1"
   },
