#156 Break up dogfood.js into intro, a GUI-generated file, and outro.

--- a/source/dogfood/intro.js.in
+++ b/source/dogfood/intro.js.in
@@ -7,10 +7,6 @@ module cannot rewrite how each individual Membrane works.
 */
 var Membrane;
 if (false) {
-  var DogfoodMembrane = new MembraneInternal({
-    /* configuration options here */
-  });
-
   /* This provides a weak reference to each proxy coming out of a Membrane.
    *
    * Why have this tracking mechanism?  The "dogfood" membrane must ensure any
@@ -37,36 +33,6 @@ if (false) {
    * is referenced only by proxies exported from any Membrane, via another
    * WeakMap the ProxyMapping belongs to.
    */
-  DogfoodMembrane.ProxyToMembraneMap = new WeakSet();
 
-  let publicAPI   = DogfoodMembrane.getHandlerByName("public", true);
-  let internalAPI = DogfoodMembrane.getHandlerByName("internal", true);
-
-  // lockdown of the public API here
-
-  // Define our Membrane constructor properly.
-  Membrane = DogfoodMembrane.convertArgumentToProxy(
-    internalAPI, publicAPI, MembraneInternal
-  );
-  /* XXX ajvincent Membrane.prototype should return an object with descriptor
-   * "secured": new DataDescriptor(true, false, false, false)
-   */
-
-  if (false) {
-    /* XXX ajvincent Right now it's unclear if this operation is safe.  It
-     * probably isn't, but as long as DogfoodMembrane isn't exposed outside this
-     * module, we're okay.
-     */
-    let finalWrap = DogfoodMembrane.convertArgumentToProxy(
-      internalAPI, publicAPI, DogfoodMembrane
-    );
-
-    // Additional securing and API overrides of DogfoodMembrane here.
-
-    DogfoodMembrane = finalWrap;
-  }
-}
-else {
-  Membrane = MembraneInternal;
-}
-MembraneInternal = null;
+  var DogfoodMembrane = (
+  /* start included membrane constructor */
