--- a/source/dogfood/outro.js.in
+++ b/source/dogfood/outro.js.in
@@ -31,8 +31,12 @@
   }
 
   const firstError = DogfoodLogger.getFirstError();
-  if (firstError)
+  if (firstError) {
+    Membrane = function() {
+      throw new Error("Membrane constructor could not be exported");
+    };
     throw firstError;
+  }
 }
 
 MembraneInternal = null;
