#52, Define Membrane.prototype.secured = true with dogfood membrane.

--- a/source/dogfood/outro.js.in
+++ b/source/dogfood/outro.js.in
@@ -7,6 +7,12 @@
   let internalAPI = DogfoodMembrane.getHandlerByName("internal", { mustCreate: true });
 
   // lockdown of the public API here
+  Reflect.defineProperty(
+    MembraneInternal.prototype,
+    "secured",
+    new NWNCDataDescriptor(true, true)
+  );
+  assert(MembraneInternal.prototype.secured, "Failed to set secured?");
 
   // Define our Membrane constructor properly.
   Membrane = DogfoodMembrane.convertArgumentToProxy(
