Update try 6 for Travis CI: let's see if the path is busted.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
   - "10.16.0"
 script:
   # this is a condensed version of the default PATH that puts ./node_modules/.bin at the end
-  - export PATH=/usr/bin:/home/travis/.nvm/versions/node/v6.5.0/bin:/home/travis/bin:/home/travis/.local/bin:/usr/local/phantomjs/bin:/usr/local/clang-3.4/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:./node_modules/.bin
+  #- export PATH=/usr/bin:/home/travis/.nvm/versions/node/v6.5.0/bin:/home/travis/bin:/home/travis/.local/bin:/usr/local/phantomjs/bin:/usr/local/clang-3.4/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:./node_modules/.bin
   - make travis-ci
 services:
   - xvfb
