--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An ECMAScript implementation of a Membrane, allowing users to dynamically hide, override, or extend objects in JavaScript with controlled effects on the original objects.",
   "main": "docs/dist/node/es-membrane.js",
   "scripts": {
+    "debug": "node --inspect-brk ./node_modules/jasmine/bin/jasmine.js",
     "gui-tests": "karma start gui-tests.conf.js",
     "test": "./node_modules/jasmine/bin/jasmine.js"
   },
