--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "docs/dist/node/es-membrane.js",
   "scripts": {
     "debug": "node --inspect-brk ./node_modules/jasmine/bin/jasmine.js",
+    "eslint": "eslint",
     "gui-tests": "karma start gui-tests.conf.js",
     "test": "./node_modules/jasmine/bin/jasmine.js"
   },
@@ -22,6 +23,8 @@
     "assert": "^1.4.1"
   },
   "devDependencies": {
+    "eslint": "^7.20.0",
+    "eslint-plugin-jasmine": "^4.1.2",
     "jasmine": "^2.8.0",
     "karma": "^5.0.4",
     "karma-chrome-launcher": "^2.2.0",
