--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "debug": "node --inspect-brk ./node_modules/jasmine/bin/jasmine.js",
     "eslint": "eslint",
     "gui-tests": "karma start gui-tests.conf.js",
+    "rollup": "rollup --config rollup.config.mjs",
     "test": "jasmine"
   },
   "repository": {
@@ -27,6 +28,7 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
     "karma-firefox-launcher": "^1.3.0",
-    "karma-jasmine": "^1.1.2"
+    "karma-jasmine": "^1.1.2",
+    "rollup": "^2.39.1"
   }
 }
