--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "es-membrane",
   "version": "0.9.0",
   "description": "An ECMAScript implementation of a Membrane, allowing users to dynamically hide, override, or extend objects in JavaScript with controlled effects on the original objects.",
-  "main": "docs/dist/node/es-membrane.js",
+  "main": "docs/dist/Membrane.mjs",
   "scripts": {
     "debug": "node --inspect-brk ./node_modules/jasmine/bin/jasmine.js",
     "eslint": "eslint",
