--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.9.0",
   "description": "An ECMAScript implementation of a Membrane, allowing users to dynamically hide, override, or extend objects in JavaScript with controlled effects on the original objects.",
   "main": "docs/dist/Membrane.mjs",
+  "engines": {
+    "node": ">=14"
+  },
   "scripts": {
     "debug": "node --inspect-brk ./node_modules/jasmine/bin/jasmine.js",
     "eslint": "eslint",
