--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "es-membrane",
-  "version": "0.9.0",
+  "version": "0.11.0",
   "description": "An ECMAScript implementation of a Membrane, allowing users to dynamically hide, override, or extend objects in JavaScript with controlled effects on the original objects.",
   "main": "docs/dist/node/es-membrane.js",
   "scripts": {
@@ -17,15 +17,7 @@
     "url": "https://github.com/ajvincent/es-membrane/issues"
   },
   "homepage": "https://github.com/ajvincent/es-membrane#readme",
-  "dependencies": {
-    "assert": "^1.4.1"
-  },
   "devDependencies": {
-    "jasmine": "^2.8.0",
-    "karma": "^6.3.16",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-cli": "^1.0.1",
-    "karma-firefox-launcher": "^1.3.0",
-    "karma-jasmine": "^1.1.2"
+    "jasmine": "^4.1.0"
   }
 }
