--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/ajvincent/es-membrane#readme",
   "devDependencies": {
-    "jasmine": "^4.1.0"
+    "@tsconfig/node16": "^1.0.2",
+    "@types/jasmine": "^4.0.3",
+    "@types/node": "^17.0.41",
+    "jasmine": "^4.1.0",
+    "typescript": "^4.7.3"
   }
 }
