--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An ECMAScript implementation of a Membrane, allowing users to dynamically hide, override, or extend objects in JavaScript with controlled effects on the original objects.",
   "main": "docs/dist/node/es-membrane.js",
   "scripts": {
-    "test": "./node_modules/jasmine/bin/jasmine.js"
+    "debug": "node ./_01_build/source/main.mjs debug",
+    "test": "node ./_01_build/source/main.mjs test"
   },
   "repository": {
     "type": "git",
