--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An ECMAScript implementation of a Membrane, allowing users to dynamically hide, override, or extend objects in JavaScript with controlled effects on the original objects.",
   "main": "docs/dist/node/es-membrane.js",
   "scripts": {
+    "clean": "node ./_01_build/source/main.mjs clean",
     "debug": "node ./_01_build/source/main.mjs debug",
     "build": "node ./_01_build/source/main.mjs stages",
     "test": "node ./_01_build/source/main.mjs test"
