--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "clean": "node ./_01_build/source/main.mjs clean",
     "debug": "node ./_01_build/source/main.mjs debug",
+    "eslint": "node ./_01_build/source/main.mjs eslint",
     "build": "node ./_01_build/source/main.mjs stages",
     "test": "node ./_01_build/source/main.mjs test"
   },
@@ -23,6 +24,10 @@
     "@tsconfig/node16": "^1.0.2",
     "@types/jasmine": "^4.0.3",
     "@types/node": "^17.0.41",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
+    "eslint": "^8.17.0",
+    "eslint-plugin-json": "^3.1.0",
     "jasmine": "^4.1.0",
     "typescript": "^4.7.3"
   }
