--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@typescript-eslint/parser": "^5.27.1",
     "eslint": "^8.17.0",
     "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-tsdoc": "^0.2.16",
     "jasmine": "^4.1.0",
     "typescript": "^4.7.3"
   }
