_01_build/targets.mts: tsc build/*.mts before import build/support.mjs

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 node_modules/
 docs/dist/staging/
 **/.DS_Store
-_*/ts-stdout.txt
-_*/tsconfig.json
+_*/**/ts-stdout.txt
+_*/**/tsconfig.json
 
 _*/**/*.mjs
 !_01_build/source/**.mjs
