Add a missed build module.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,6 @@ _*/**/ts-stdout.txt
 _*/**/tsconfig.json
 
 _*/**/*.mjs
-!_01_build/source/**.mjs
+!_01_build/source/**/*.mjs
 _*/**/*.mjs.map
 _*/**/*.d.mts
