--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "@types/jasmine": "^4.0.3",
     "@types/node": "^17.0.41",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
-    "@typescript-eslint/parser": "^5.27.1",
     "@typescript-eslint/typescript-estree": "^5.27.1",
     "eslint": "^8.17.0",
+    "eslint-plugin-jasmine": "^4.1.3",
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-tsdoc": "^0.2.16",
     "jasmine": "^4.1.0",
