--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/typescript-estree": "^5.44.0",
+    "ajv": "^8.11.2",
     "eslint": "^8.28.0",
     "eslint-plugin-jasmine": "^4.1.3",
     "eslint-plugin-json": "^3.1.0",
