--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "es-membrane",
   "version": "0.11.0",
   "description": "An ECMAScript implementation of a Membrane, allowing users to dynamically hide, override, or extend objects in JavaScript with controlled effects on the original objects.",
-  "main": "docs/dist/node/es-membrane.js",
   "scripts": {
     "clean": "node ./build/source/mainWithBuild.mjs clean",
     "build": "node ./build/source/mainWithBuild.mjs stages",
@@ -22,6 +21,9 @@
     "url": "https://github.com/ajvincent/es-membrane/issues"
   },
   "homepage": "https://github.com/ajvincent/es-membrane#readme",
+  "imports": {
+    "#stageUtilities/*": "./_01_stage_utilities/source/*"
+  },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
     "@types/jasmine": "^4.3.0",
