--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-tsdoc": "^0.2.17",
     "jasmine": "^4.6.0",
+    "type-fest": "^3.7.0",
     "typescript": "^5.0.2"
   }
 }
