--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "lib": ["es2022"],
+    "lib": ["ESNext"],
     "module": "es2022",
-    "target": "es2022",
+    "target": "esnext",
     "moduleResolution": "node",
     "sourceMap": true,
     "declaration": true
