Add #stub_classes subpath import.

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "typescript": "^5.0.2"
   },
   "imports": {
-    "#stage_utilities/*": "./_01_stage_utilities/*"
+    "#stage_utilities/*": "./_01_stage_utilities/*",
+    "#stub_classes/*": "./_02_stub_classes/*"
   }
 }
