--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
 
     "baseUrl": ".",
     "paths": {
-      "#stage_utilities/*": ["./_01_stage_utilities/*"]
+      "#stage_utilities/*": ["./_01_stage_utilities/*"],
+      "#stub_classes/*": ["./_02_stub_classes/*"]
     }
   },
 
