s/aspect_weaving/aspect_dictionary/

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "paths": {
       "#stage_utilities/*": ["./_01_stage_utilities/*"],
       "#stub_classes/*": ["./_02_stub_classes/*"],
-      "#aspect_weaving/*": ["./_03_aspect_weaving/*"],
+      "#aspect_dictionary/*": ["./_03_aspect_dictionary/*"],
     }
   },
 
