Aspects directories reorganization, part 4.

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "#stub_classes/*": "./_02_stub_classes/*",
     "#aspects/dictionary_build/*": "./_03a_aspects_dictionary_build/*",
     "#aspects/dictionary/*": "./_03b_aspects_dictionary/*",
-    "#aspects/driver/*": "./_03c_aspects_driver/*"
+    "#aspects/driver/*": "./_03c_aspects_driver/*",
+    "#aspects/test-fixtures/*": "./_03z_aspects_test_fixtures/*"
   }
 }
