--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "paths": {
       "#stage_utilities/*": ["./_01_stage_utilities/*"],
       "#mixin_decorators/*": ["./_02_mixin_decorators/*"],
+      "#aspects/stubs/*": ["./_03b_aspects_stubs/*"],
       "#aspects/test-fixtures/*": ["./_03z_aspects_test_fixtures/*"]
     }
   },
