--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "node ./build/source/mainWithBuild.mjs stages",
     "test": "node ./build/source/mainWithBuild.mjs test",
     "eslint": "node ./build/source/mainWithBuild.mjs eslint",
+    "eslint-fix": "node ./build/source/mainWithBuild.mjs eslint-fix",
     "debug": "node ./build/source/mainWithBuild.mjs debug",
     "build-debug": "node --inspect-brk ./build/source/main.mjs clean stages",
     "all": "node ./build/source/mainWithBuild.mjs clean stages test eslint",
