--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
   "plugins": [
     "@typescript-eslint",
     "eslint-plugin-tsdoc",
+    "import",
     "jasmine"
   ],
   "root": true,
@@ -49,6 +50,21 @@
     ],
     "@typescript-eslint/consistent-type-definitions": "off",
     "@typescript-eslint/explicit-function-return-type": ["error"],
+    "import/no-cycle": "error",
     "tsdoc/syntax": "warn"
+  },
+  "settings": {
+    "import/parsers": {
+      "@typescript-eslint/parser": [".mts"]
+    },
+    "import/resolver": {
+      "typescript": {
+        "alwaysTryTypes": true, // always try to resolve types under `<root>@types` directory even it doesn't contain any source code, like `@types/unist`
+
+        // Choose from one of the "project" configs below or omit to use <root>/tsconfig.json by default
+
+        "project": "_*/tsconfig.json"
+      }
+    }
   }
 }
