--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@typescript-eslint/parser": "^6.0.0",
     "code-block-writer": "^12.0.0",
     "eslint": "^8.45.0",
+    "eslint-import-resolver-typescript": "^3.6.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jasmine": "^4.1.3",
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-tsdoc": "^0.2.17",
