--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,8 @@
   },
   "extends": [
     "eslint:recommended",
+    "plugin:import/recommended",
+    "plugin:import/typescript",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/recommended-type-checked",
@@ -50,7 +52,6 @@
     ],
     "@typescript-eslint/consistent-type-definitions": "off",
     "@typescript-eslint/explicit-function-return-type": ["error"],
-    "import/no-cycle": "error",
     "tsdoc/syntax": "warn"
   },
   "settings": {
