--- a/package.json
+++ b/package.json
@@ -2,17 +2,7 @@
   "name": "es-membrane",
   "version": "0.11.0",
   "description": "An ECMAScript implementation of a Membrane, allowing users to dynamically hide, override, or extend objects in JavaScript with controlled effects on the original objects.",
-  "scripts": {
-    "clean": "node ./build/source/mainWithBuild.mjs clean",
-    "build": "node ./build/source/mainWithBuild.mjs stages",
-    "test": "node ./build/source/mainWithBuild.mjs test",
-    "eslint": "node ./build/source/mainWithBuild.mjs eslint",
-    "eslint-fix": "node ./build/source/mainWithBuild.mjs eslint-fix",
-    "debug": "node ./build/source/mainWithBuild.mjs debug",
-    "build-debug": "node --inspect-brk ./build/source/main.mjs clean stages",
-    "all": "node ./build/source/mainWithBuild.mjs clean stages test eslint",
-    "examples": "node ./build/source/mainWithBuild.mjs examples"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ajvincent/es-membrane.git"
@@ -24,23 +14,17 @@
   },
   "homepage": "https://github.com/ajvincent/es-membrane#readme",
   "devDependencies": {
-    "@tsconfig/node18": "^1.0.3",
-    "@types/jasmine": "^4.3.5",
-    "@types/node": "^18.16.19",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "code-block-writer": "^12.0.0",
-    "eslint": "^8.45.0",
-    "eslint-import-resolver-typescript": "^3.6.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jasmine": "^4.1.3",
-    "eslint-plugin-json": "^3.1.0",
-    "eslint-plugin-tsdoc": "^0.2.17",
-    "jasmine": "^5.0.2",
-    "mixin-decorators": "^1.0.0",
-    "ts-morph": "^19.0.0",
-    "type-fest": "^3.13.0",
-    "typescript": "^5.1.6"
+    "@tsconfig/node18": "^18.2.4",
+    "@types/jasmine": "^5.1.4",
+    "@types/node": "^18.19.34",
+    "code-block-writer": "^13.0.1",
+    "jasmine": "^5.1.0",
+    "mixin-decorators": "^1.0.1",
+    "ts-morph": "^22.0.0",
+    "ts-morph-structures": "^1.0.1",
+    "tslib": "^2.6.3",
+    "type-fest": "^3.13.1",
+    "typescript": "^5.4.5"
   },
   "imports": {
     "#stage_utilities/*": "./_01_stage_utilities/*",
