build system updates, part 1.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,10 @@
     "baseUrl": ".",
     "paths": {
       "#stage_utilities/*": ["./_01_stage_utilities/*"],
-      "#ts-morph_structures/*": ["./_03_ts-morph_structures/*"],
       "#aspects/stubs/*": ["./_04b_aspects_stubs/*"],
       "#aspects/decorators/*": ["./_04c_aspects_decorators/*"],
-      "#aspects/test-fixtures/*": ["./_04z_aspects_test_fixtures/*"]
+      "#aspects/test-fixtures/*": ["./_04z_aspects_test_fixtures/*"],
+      "#utilities/*": ["./utilities/*"]
     }
   },
 
@@ -21,5 +21,5 @@
     "spec/**"
   ],
 
-  "extends": "@tsconfig/node18/tsconfig.json"
+  "extends": "@tsconfig/node20/tsconfig.json"
 }
