--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "es-membrane",
+  "type": "module",
   "version": "0.11.0",
   "description": "An ECMAScript implementation of a Membrane, allowing users to dynamically hide, override, or extend objects in JavaScript with controlled effects on the original objects.",
-  "scripts": {},
+  "engines": {
+    "node": ">=20.15"
+  },
+  "scripts": {
+    "build": "node --expose-gc --import ./register-hooks.js ./build.ts"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ajvincent/es-membrane.git"
@@ -14,13 +20,14 @@
   },
   "homepage": "https://github.com/ajvincent/es-membrane#readme",
   "devDependencies": {
-    "@tsconfig/node18": "^18.2.4",
+    "@tsconfig/node20": "^20.1.4",
     "@types/jasmine": "^5.1.4",
     "@types/node": "^18.19.34",
     "jasmine": "^5.1.0",
     "mixin-decorators": "^1.0.1",
     "ts-morph": "^23.0.0",
     "ts-morph-structures": "^1.1.0",
+    "ts-node": "^10.9.2",
     "tslib": "^2.6.3",
     "type-fest": "^4.20.1",
     "typescript": "^5.5.2"
@@ -29,6 +36,7 @@
     "#stage_utilities/*": "./_01_stage_utilities/*",
     "#aspects/stubs/*": "./_04b_aspects_stubs/*",
     "#aspects/decorators/*": "./_04c_aspects_decorators/*",
-    "#aspects/test-fixtures/*": "./_04z_aspects_test_fixtures/*"
+    "#aspects/test-fixtures/*": "./_04z_aspects_test_fixtures/*",
+    "#utilities/*": "./utilities/*"
   }
 }
