Fix TypeScript configuration for ts-node, ECMAScript decorators.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
     "lib": ["ESNext"],
-    "module": "es2022",
-    "target": "esnext",
-    "moduleResolution": "node",
+    "module": "NodeNext",
+    "target": "ES2022",
+    "moduleResolution": "NodeNext",
+    "strict": true,
     "sourceMap": true,
     "declaration": true,
 
