--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
       "#aspects/stubs/*": ["./_04b_aspects_stubs/*"],
       "#aspects/decorators/*": ["./_04c_aspects_decorators/*"],
       "#aspects/test-fixtures/*": ["./_04z_aspects_test_fixtures/*"],
-      "#utilities/*": ["./utilities/*"]
+      "#build-utilities/*": ["./build-utilities/*"]
     }
   },
 
