--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "type": "module",
   "version": "0.11.0",
   "description": "An ECMAScript implementation of a Membrane, allowing users to dynamically hide, override, or extend objects in JavaScript with controlled effects on the original objects.",
+  "//": {
+    "debug": "Debugging this code requires Node 18.  Node 20 will fail to start running your code when using --inspect-brk and --import."
+  },
   "engines": {
-    "node": ">=20.15"
+    "node": ">=18.19"
   },
   "scripts": {
-    "build-old": "node --expose-gc --import ./register-hooks.js ./build.ts",
-    "build": "node --expose-gc --import=tsimp/import --import ./build-utilities/loader-hooks/subpath/registration.js ./build.ts",
+    "build": "node --expose-gc --import ./register-hooks.js ./build.ts",
+    "build-tsimp": "node --expose-gc --import=tsimp/import --import ./build-utilities/loader-hooks/subpath/registration.js ./build.ts",
     "tsimp-clean": "tsimp --clear"
   },
   "repository": {
@@ -37,7 +40,7 @@
   },
   "imports": {
     "#stage_utilities/*": "./_01_stage_utilities/*",
-    "#aspects/stubs/*": "./_04b_aspects_stubs/*",
+    "#aspects/stubs/*": "./_02c_aspects_stubs/*",
     "#aspects/decorators/*": "./_04c_aspects_decorators/*",
     "#aspects/test-fixtures/*": "./_04z_aspects_test_fixtures/*",
     "#build-utilities/*": "./build-utilities/*"
