--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "baseUrl": ".",
     "paths": {
       "#stage_utilities/*": ["./_01_stage_utilities/*"],
-      "#aspects/stubs/*": ["./_04b_aspects_stubs/*"],
+      "#aspects/stubs/*": ["./_02c_aspects_stubs/*"],
       "#aspects/decorators/*": ["./_04c_aspects_decorators/*"],
       "#aspects/test-fixtures/*": ["./_04z_aspects_test_fixtures/*"],
       "#build-utilities/*": ["./build-utilities/*"]
