--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^18.19.34",
     "jasmine": "^5.1.0",
     "mixin-decorators": "^1.0.1",
+    "prettier": "^3.3.3",
     "ts-morph": "^23.0.0",
     "ts-morph-structures": "^1.1.1",
     "ts-node": "^10.9.2",
