Experiment for static analysis finding references to variables, part 1

--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "@tsconfig/node20": "^20.1.4",
     "@types/jasmine": "^5.1.4",
     "@types/node": "^18.19.34",
+    "@typescript-eslint/scope-manager": "^7.16.1",
+    "@typescript-eslint/typescript-estree": "^7.16.1",
+    "acorn-walk": "^8.3.3",
     "jasmine": "^5.1.0",
     "mixin-decorators": "^1.0.1",
     "prettier": "^3.3.3",
