Foundation work for MirrorMembrane class.

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "#stage_utilities/*": "./_01_stage_utilities/*",
     "#code_generation/*": "./_02_code_generation/*",
     "#objectgraph_handlers/*": "./_03_objectgraph_handlers/*",
+    "#mirror_membranes/*": "./_04_mirror_membranes/*",
     "#build-utilities/*": "./build-utilities/*"
   }
 }
