Strong and weak references as JSON, part 1.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ _*/**/playground
 _*/spec-generated
 _*/**/ts-stdout.txt
 _*/**/tsconfig.json
+_*/class-references.json
 
 old-build/**/*.mjs.map
 old-build/**/*.d.mts
