refactor to use TSESTree directly in tests

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@ _*/**/playground
 _*/spec-generated
 _*/**/ts-stdout.txt
 _*/**/tsconfig.json
-_*/class-references.json
-_*/**/class-references.json
+_*/class-tsestree.json
+_*/**/class-tsestree.json
 
 old-build/**/*.mjs.map
 old-build/**/*.d.mts
