--- a/packages/v2-es-membrane/.gitignore
+++ b/packages/v2-es-membrane/.gitignore
@@ -1,9 +1,19 @@
 **/.DS_Store
 _*/generated
 _*/**/playground
-_*/spec-generated
 _*/**/ts-stdout.txt
 _*/**/tsconfig.json
+_*/*.js
+_*/*.d.ts
+_*/*.map
+_*/**/*.js
+_*/**/*.d.ts
+_*/**/*.map
+!_*/**/types/*.d.ts
+!_*/**/types/**/*.d.ts
+Gulpfile.d.ts
+Gulpfile.js
+Gulpfile.js.map
 
 playground/
 .tsimp
