Hide tsc-generated files from VSCode.

--- a/packages/v2-es-membrane/tsconfig.json
+++ b/packages/v2-es-membrane/tsconfig.json
@@ -6,7 +6,7 @@
     "moduleResolution": "NodeNext",
     "strict": true,
     "sourceMap": true,
-    "declaration": true,
+    "declaration": false,
 
     "baseUrl": ".",
     "paths": {
