--- a/packages/v2-es-membrane/tsconfig-gulp.json
+++ b/packages/v2-es-membrane/tsconfig-gulp.json
@@ -2,7 +2,9 @@
   "extends": "./tsconfig.json",
   "include": [
     "Gulpfile.ts",
-    "gulp-utilities/**/*.ts"
+    "gulp-utilities/**/*.ts",
+    "*/pre-build/Gulpfile.ts",
+    "*/Gulpfile.ts"
   ]
 }
 
